--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -10,6 +10,10 @@ label {
     margin-top: 15px;
 }
 
+#new-advert-form-submit-button {
+    margin-top: 15px;
+}
+
 
 
 /* input[type=text], textarea {
