refactored to only include seller edit

--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -1,4 +1,4 @@
-.new-advert-form, .edit-advert-form {
+.new-advert-form, .edit-seller-form {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
