--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -8,11 +8,23 @@
 label {
     display: block;
     margin-top: 15px;
+    color: rgb(45, 89, 104);
 }
 
 #new-advert-form-submit-button {
     margin-top: 15px;
 }
+
+input {
+    border: 1px solid rgb(45, 89, 104);
+    border-radius: 5px;
+}
+
+h3 {
+    color: rgb(45, 89, 104)
+}
+
+
 
 
 
