--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -46,17 +46,21 @@ h3 {
     
 }
 
-/* #keyword-search {
-    text-align: center;
-} */
+input {
+    height: 50px;
+    width: 300px;
+    font-size: 25px;
+    margin-top: 15px;
+}
 
 button {
     background-color: rgb(45, 89, 104);
     color: white;
     margin-left: 10px;
     margin-top: 10px;
-    height: 35px;
+    height: 40px;
     width: 150px;
+    font-size: 15px;
 }
 
 select {
