fixed checkbox and redirected route

--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -51,6 +51,12 @@ input {
     width: 300px;
     font-size: 25px;
     margin-top: 15px;
+    align-items: center;
+}
+
+input[type='checkbox'] {
+    height: 20px;
+    width: 20px;
 }
 
 button {
